# snakemake_paper_demo_workflow

./: .gitignore  LICENSE  README.md  gen_data.py  pyproject.toml
workflow/: Snakefile
workflow/rules/: common.smk  coreg.smk  mot_correct.smk  st_correct.smk  tmean.smk
workflow/scripts/: mot_correct.py
