[project]
name = "snakemake-paper-demo-workflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "snakemake>=9.14.1",
]

[tool.poe.tasks]
snakemake = "snakemake --profile default"
snakemake-lint = "snakemake --lint"
snakemake-fmt = "snakefmt . --diff"
snakemake-rulegraph.shell = "snakemake --rulegraph | dot -Tsvg -o rulegraph.svg"
snakemake-dag.shell = "snakemake --dag | dot -Tpdf -Gsize='6.75,4' -o dag.pdf"
